# backpackified-effects-playground

./: README.md  cabal.project
fused-effects-example/: LICENSE  Main.hs  package.cabal
fused-effects-example/impl/Program/: Monadtastic.hs
fused-effects-example/lib/: Program.hs
fused-effects-example/lib/Program/: Monadtastic.hsig
